add ability to take user input and determines ROI

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>College Return on Investment Calculator</title>
   </head>
   <body>
-    <form class="calculator">
+    <form id="calculator">
       <div class="form-group">
         <label for="city">Select a city to live in after college: </label>
         <select class="form-control" id="city">
@@ -83,7 +83,7 @@
       </div>
       <div class="cashToday">
         <span>Lastly, let us know how much cash you have in hand and then press submit below</span>
-        <input type="number" name="" value="">
+        <input type="number" name="" id="cashToday">
         <button type="submit" name="button">Calculate my ROI</button>
 
       </div>
