update the majors available on html

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,48 @@
         <option value="New York">New York</option>
         <option value="San Jose">San Jose</option>
         <option value="San Francisco">San Francisco</option>
+        <option value="Birmingham">Birmingham</option>
+        <option value="Anchorage">Anchorage</option>
+        <option value="Little Rock">Little Rock</option>
+        <option value="Denver">Denver</option>
+        <option value="Bridgeport">Bridgeport</option>
+        <option value="Wilmington">Wilmington</option>
+        <option value="Atlanta">Atlanta</option>
+        <option value="Honolulu">Honolulu</option>
+        <option value="Boise">Boise</option>
+        <option value="Des Moines">Des Moines</option>
+        <option value="Wichita">Wichita</option>
+        <option value="Louisville">Louisville</option>
+        <option value="New Orleans">New Orleans</option>
+        <option value="Portland, ME">Portland, ME</option>
+        <option value="Baltimore">Baltimore</option>
+        <option value="Boston">Boston</option>
+        <option value="Detroit">Detroit</option>
+        <option value="Minneapolis">Minneapolis</option>
+        <option value="Kansas City">Kansas City</option>
+        <option value="Billings">Billings</option>
+        <option value="Omaha">Omaha</option>
+        <option value="Las Vegas">Las Vegas</option>
+        <option value="Manchester">Manchester</option>
+        <option value="Newark">Newark</option>
+        <option value="Albuquerque">Albuquerque</option>
+        <option value="Charlotte">Charlotte</option>
+        <option value="Fargo">Fargo</option>
+        <option value="Oklahoma City">Oklahoma City</option>
+        <option value="Portland, OR">Portland, OR</option>
+        <option value="Providence">Providence</option>
+        <option value="Charleston">Charleston</option>
+        <option value="Sioux Falls">Sioux Falls</option>
+        <option value="Nashville">Nashville</option>
+        <option value="Salt Lake City">Salt Lake City</option>
+        <option value="Burlington">Burlington</option>
+        <option value="Virginia Beach">Virginia Beach</option>
+        <option value="Seattle">Seattle</option>
+        <option value="Charleston, WV">Charleston, WV</option>
+        <option value="Milwaukee">Milwaukee</option>
+        <option value="CheyenneChemical Engineering">CheyenneChemical Engineering</option>
+
+
 
       </select>
       </div>
@@ -31,22 +73,57 @@
         <label for="salaryByMajor">Select which major you'd like to get a degree in: </label>
         <select class="form-control" id="major">
         <option value=""></option>
-        <option value="Engineering">Engineering</option>
-        <option value="Computer Science">Computer Science</option>
-        <option value="Math">Math</option>
-        <option value="Chemistry">Chemistry</option>
-        <option value="Physics">Physics</option>
+        <option value="Chemical Engineering">Chemical Engineering</option>
+        <option value="Computer Engineering">Computer EngineeringElectrical Engineering</option>
+        <option value="Electrical Engineering">Electrical Engineering</option>
+        <option value="Aerospace Engineering">Aerospace Engineering</option>
         <option value="Economics">Economics</option>
+        <option value="Physics">Physics</option>
+        <option value="Computer Science">Computer Science</option>
+        <option value="Industrial Engineering">Industrial Engineering</option>
+        <option value="Mechanical Engineering">Mechanical Engineering</option>
+        <option value="Math">Math</option>
+        <option value="Physician Assistant">Physician Assistant</option>
+        <option value="Cival Engineering">Cival Engineering</option>
+        <option value="Construction">Construction</option>
+        <option value="Finance">Finance</option>
+        <option value="Managemnet Information Systems">Managemnet Information Systems</option>
+        <option value="Philosophy">Philosophy</option>
+        <option value="International Relations">International Relations</option>
+        <option value="Chemistry">Chemistry</option>
+        <option value="Marketing">Marketing</option>
+        <option value="Geology">Geology</option>
+        <option value="Political Science">Political Science</option>
+        <option value="Accounting">Accounting</option>
+        <option value="Architecture">Architecture</option>
+        <option value="Information Technology">Information Technology</option>
+        <option value="Business Management">Business Management</option>
+        <option value="Agriculture">Agriculture</option>
         <option value="History">History</option>
+        <option value="Communications">Communications</option>
         <option value="Film">Film</option>
+        <option value="Nursing">Nursing</option>
+        <option value="Journalism">Journalism</option>
+        <option value="Geography">Geography</option>
         <option value="Art History">Art History</option>
+        <option value="Biology">Biology</option>
         <option value="English">English</option>
+        <option value="Forestry">Forestry</option>
+        <option value="Anthropology">Anthropology</option>
+        <option value="Health Care Administration">Health Care Administration</option>
         <option value="Psychology">Psychology</option>
-        <option value="English">English</option>
+        <option value="Graphic Design">Graphic Design</option>
+        <option value="Sociology">Sociology</option>
+        <option value="Hospitality & Tourism">Hospitality & Tourism</option>
+        <option value="Drama">Drama</option>
+        <option value="Criminal Justice">Criminal Justice</option>
         <option value="Nutrition">Nutrition</option>
-        <option value="Education">Education</option>
         <option value="Music">Music</option>
-        <option value="General Business">General Business</option>
+        <option value="Interior Design">Interior Design</option>
+        <option value="Spanish">Spanish</option>
+        <option value="Education">Education</option>
+        <option value="Religion">Religion</option>
+
 
 
       </select>
