fixes some syntactical errors

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,13 @@
     <title>College Return on Investment Calculator</title>
   </head>
   <body>
+    <div class="jumbotron">
+      <h1>College Return on Investment Calculator</h1>
+      <h5>So you're thinking about attending a four year school next year. Before you do, we suggest using our Return on Investment calculator below to figure out if school will leave you too far in the hole.</h5>
+
+    </div>
+    <div class="container">
+
     <form id="calculator">
       <div class="form-group">
         <label for="city">Select a city to live in after college: </label>
@@ -63,7 +70,7 @@
         <option value="Seattle">Seattle</option>
         <option value="Charleston, WV">Charleston, WV</option>
         <option value="Milwaukee">Milwaukee</option>
-        <option value="CheyenneChemical Engineering">CheyenneChemical Engineering</option>
+        <option value="Cheyenne">Cheyenne</option>
 
 
 
@@ -74,7 +81,7 @@
         <select class="form-control" id="major">
         <option value=""></option>
         <option value="Chemical Engineering">Chemical Engineering</option>
-        <option value="Computer Engineering">Computer EngineeringElectrical Engineering</option>
+        <option value="Computer Engineering">Computer Engineering</option>
         <option value="Electrical Engineering">Electrical Engineering</option>
         <option value="Aerospace Engineering">Aerospace Engineering</option>
         <option value="Economics">Economics</option>
@@ -159,7 +166,7 @@
       </select>
       </div>
       <div class="cashToday">
-        <span>Lastly, let us know how much cash you have in hand and then press submit below</span>
+        <span>Lastly, let us know how much cash you have in hand and then press submit below</span><br>
         <input type="number" name="" id="cashToday">
         <button type="submit" name="button">Calculate my ROI</button>
 
@@ -170,6 +177,7 @@
       <h3></h3>
 
     </div>
+  </div>
 
   </body>
 </html>
