--- a/src/index.html
+++ b/src/index.html
@@ -1,169 +1,222 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>College Return on Investment Calculator</title>
-  </head>
-  <body>
+<head>
+  <title>College Return on Investment Calculator</title>
+</head>
+<body>
+  <div class="container">
+    <div id="firstPage">
+      <div class="jumbotron">
+        <h1>What would you like to do</h1>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card text-white bg-dark mb-3">
+            <div class="card-body" id="specificDoctor">
+              <h5 class="card-title">Find Specific Doctor</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card text-white bg-danger mb-3">
+            <div class="card-body" id="symptomDoctor">
+              <h5 class="card-title">Find doctor based on symptoms</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <div class="jumbotron">
       <h1>College Return on Investment Calculator</h1>
       <h5>So you're thinking about attending a four year school next year. Before you do, we suggest using our Return on Investment calculator below to figure out if school will leave you too far in the hole.</h5>
-
     </div>
-    <div class="container">
 
     <form id="calculator">
       <div class="form-group">
         <label for="city">Select a city to live in after college: </label>
         <select class="form-control" id="city">
-        <option value=""></option>
-        <option value="San Antonio">San Antonio</option>
-        <option value="Columbus">Columbus</option>
-        <option value="Jacksonville">Jacksonville</option>
-        <option value="Indianapolis">Indianapolis</option>
-        <option value="Dallas">Dallas</option>
-        <option value="Houston">Houston</option>
-        <option value="Pheonix">Pheonix</option>
-        <option value="Philadelphia">Philadelphia</option>
-        <option value="Austino">Austin</option>
-        <option value="Chicago">Chicago</option>
-        <option value="Los Angeles">Los Angeles</option>
-        <option value="San Diego">San Diego</option>
-        <option value="New York">New York</option>
-        <option value="San Jose">San Jose</option>
-        <option value="San Francisco">San Francisco</option>
-        <option value="Birmingham">Birmingham</option>
-        <option value="Anchorage">Anchorage</option>
-        <option value="Little Rock">Little Rock</option>
-        <option value="Denver">Denver</option>
-        <option value="Bridgeport">Bridgeport</option>
-        <option value="Wilmington">Wilmington</option>
-        <option value="Atlanta">Atlanta</option>
-        <option value="Honolulu">Honolulu</option>
-        <option value="Boise">Boise</option>
-        <option value="Des Moines">Des Moines</option>
-        <option value="Wichita">Wichita</option>
-        <option value="Louisville">Louisville</option>
-        <option value="New Orleans">New Orleans</option>
-        <option value="Portland, ME">Portland, ME</option>
-        <option value="Baltimore">Baltimore</option>
-        <option value="Boston">Boston</option>
-        <option value="Detroit">Detroit</option>
-        <option value="Minneapolis">Minneapolis</option>
-        <option value="Kansas City">Kansas City</option>
-        <option value="Billings">Billings</option>
-        <option value="Omaha">Omaha</option>
-        <option value="Las Vegas">Las Vegas</option>
-        <option value="Manchester">Manchester</option>
-        <option value="Newark">Newark</option>
-        <option value="Albuquerque">Albuquerque</option>
-        <option value="Charlotte">Charlotte</option>
-        <option value="Fargo">Fargo</option>
-        <option value="Oklahoma City">Oklahoma City</option>
-        <option value="Portland, OR">Portland, OR</option>
-        <option value="Providence">Providence</option>
-        <option value="Charleston">Charleston</option>
-        <option value="Sioux Falls">Sioux Falls</option>
-        <option value="Nashville">Nashville</option>
-        <option value="Salt Lake City">Salt Lake City</option>
-        <option value="Burlington">Burlington</option>
-        <option value="Virginia Beach">Virginia Beach</option>
-        <option value="Seattle">Seattle</option>
-        <option value="Charleston, WV">Charleston, WV</option>
-        <option value="Milwaukee">Milwaukee</option>
-        <option value="Cheyenne">Cheyenne</option>
+          <option value=""></option>
+          <option value="San Antonio">San Antonio</option>
+          <option value="Columbus">Columbus</option>
+          <option value="Jacksonville">Jacksonville</option>
+          <option value="Indianapolis">Indianapolis</option>
+          <option value="Dallas">Dallas</option>
+          <option value="Houston">Houston</option>
+          <option value="Pheonix">Pheonix</option>
+          <option value="Philadelphia">Philadelphia</option>
+          <option value="Austino">Austin</option>
+          <option value="Chicago">Chicago</option>
+          <option value="Los Angeles">Los Angeles</option>
+          <option value="San Diego">San Diego</option>
+          <option value="New York">New York</option>
+          <option value="San Jose">San Jose</option>
+          <option value="San Francisco">San Francisco</option>
+          <option value="Birmingham">Birmingham</option>
+          <option value="Anchorage">Anchorage</option>
+          <option value="Little Rock">Little Rock</option>
+          <option value="Denver">Denver</option>
+          <option value="Bridgeport">Bridgeport</option>
+          <option value="Wilmington">Wilmington</option>
+          <option value="Atlanta">Atlanta</option>
+          <option value="Honolulu">Honolulu</option>
+          <option value="Boise">Boise</option>
+          <option value="Des Moines">Des Moines</option>
+          <option value="Wichita">Wichita</option>
+          <option value="Louisville">Louisville</option>
+          <option value="New Orleans">New Orleans</option>
+          <option value="Portland, ME">Portland, ME</option>
+          <option value="Baltimore">Baltimore</option>
+          <option value="Boston">Boston</option>
+          <option value="Detroit">Detroit</option>
+          <option value="Minneapolis">Minneapolis</option>
+          <option value="Kansas City">Kansas City</option>
+          <option value="Billings">Billings</option>
+          <option value="Omaha">Omaha</option>
+          <option value="Las Vegas">Las Vegas</option>
+          <option value="Manchester">Manchester</option>
+          <option value="Newark">Newark</option>
+          <option value="Albuquerque">Albuquerque</option>
+          <option value="Charlotte">Charlotte</option>
+          <option value="Fargo">Fargo</option>
+          <option value="Oklahoma City">Oklahoma City</option>
+          <option value="Portland, OR">Portland, OR</option>
+          <option value="Providence">Providence</option>
+          <option value="Charleston">Charleston</option>
+          <option value="Sioux Falls">Sioux Falls</option>
+          <option value="Nashville">Nashville</option>
+          <option value="Salt Lake City">Salt Lake City</option>
+          <option value="Burlington">Burlington</option>
+          <option value="Virginia Beach">Virginia Beach</option>
+          <option value="Seattle">Seattle</option>
+          <option value="Charleston, WV">Charleston, WV</option>
+          <option value="Milwaukee">Milwaukee</option>
+          <option value="Cheyenne">Cheyenne</option>
 
 
 
-      </select>
+        </select>
       </div>
       <div class="form-group">
         <label for="salaryByMajor">Select which major you'd like to get a degree in: </label>
         <select class="form-control" id="major">
-        <option value=""></option>
-        <option value="Chemical Engineering">Chemical Engineering</option>
-        <option value="Computer Engineering">Computer Engineering</option>
-        <option value="Electrical Engineering">Electrical Engineering</option>
-        <option value="Aerospace Engineering">Aerospace Engineering</option>
-        <option value="Economics">Economics</option>
-        <option value="Physics">Physics</option>
-        <option value="Computer Science">Computer Science</option>
-        <option value="Industrial Engineering">Industrial Engineering</option>
-        <option value="Mechanical Engineering">Mechanical Engineering</option>
-        <option value="Math">Math</option>
-        <option value="Physician Assistant">Physician Assistant</option>
-        <option value="Cival Engineering">Cival Engineering</option>
-        <option value="Construction">Construction</option>
-        <option value="Finance">Finance</option>
-        <option value="Managemnet Information Systems">Managemnet Information Systems</option>
-        <option value="Philosophy">Philosophy</option>
-        <option value="International Relations">International Relations</option>
-        <option value="Chemistry">Chemistry</option>
-        <option value="Marketing">Marketing</option>
-        <option value="Geology">Geology</option>
-        <option value="Political Science">Political Science</option>
-        <option value="Accounting">Accounting</option>
-        <option value="Architecture">Architecture</option>
-        <option value="Information Technology">Information Technology</option>
-        <option value="Business Management">Business Management</option>
-        <option value="Agriculture">Agriculture</option>
-        <option value="History">History</option>
-        <option value="Communications">Communications</option>
-        <option value="Film">Film</option>
-        <option value="Nursing">Nursing</option>
-        <option value="Journalism">Journalism</option>
-        <option value="Geography">Geography</option>
-        <option value="Art History">Art History</option>
-        <option value="Biology">Biology</option>
-        <option value="English">English</option>
-        <option value="Forestry">Forestry</option>
-        <option value="Anthropology">Anthropology</option>
-        <option value="Health Care Administration">Health Care Administration</option>
-        <option value="Psychology">Psychology</option>
-        <option value="Graphic Design">Graphic Design</option>
-        <option value="Sociology">Sociology</option>
-        <option value="Hospitality & Tourism">Hospitality & Tourism</option>
-        <option value="Drama">Drama</option>
-        <option value="Criminal Justice">Criminal Justice</option>
-        <option value="Nutrition">Nutrition</option>
-        <option value="Music">Music</option>
-        <option value="Interior Design">Interior Design</option>
-        <option value="Spanish">Spanish</option>
-        <option value="Education">Education</option>
-        <option value="Religion">Religion</option>
+          <option value=""></option>
+          <option value="Chemical Engineering">Chemical Engineering</option>
+          <option value="Computer Engineering">Computer Engineering</option>
+          <option value="Electrical Engineering">Electrical Engineering</option>
+          <option value="Aerospace Engineering">Aerospace Engineering</option>
+          <option value="Economics">Economics</option>
+          <option value="Physics">Physics</option>
+          <option value="Computer Science">Computer Science</option>
+          <option value="Industrial Engineering">Industrial Engineering</option>
+          <option value="Mechanical Engineering">Mechanical Engineering</option>
+          <option value="Math">Math</option>
+          <option value="Physician Assistant">Physician Assistant</option>
+          <option value="Cival Engineering">Cival Engineering</option>
+          <option value="Construction">Construction</option>
+          <option value="Finance">Finance</option>
+          <option value="Managemnet Information Systems">Managemnet Information Systems</option>
+          <option value="Philosophy">Philosophy</option>
+          <option value="International Relations">International Relations</option>
+          <option value="Chemistry">Chemistry</option>
+          <option value="Marketing">Marketing</option>
+          <option value="Geology">Geology</option>
+          <option value="Political Science">Political Science</option>
+          <option value="Accounting">Accounting</option>
+          <option value="Architecture">Architecture</option>
+          <option value="Information Technology">Information Technology</option>
+          <option value="Business Management">Business Management</option>
+          <option value="Agriculture">Agriculture</option>
+          <option value="History">History</option>
+          <option value="Communications">Communications</option>
+          <option value="Film">Film</option>
+          <option value="Nursing">Nursing</option>
+          <option value="Journalism">Journalism</option>
+          <option value="Geography">Geography</option>
+          <option value="Art History">Art History</option>
+          <option value="Biology">Biology</option>
+          <option value="English">English</option>
+          <option value="Forestry">Forestry</option>
+          <option value="Anthropology">Anthropology</option>
+          <option value="Health Care Administration">Health Care Administration</option>
+          <option value="Psychology">Psychology</option>
+          <option value="Graphic Design">Graphic Design</option>
+          <option value="Sociology">Sociology</option>
+          <option value="Hospitality & Tourism">Hospitality & Tourism</option>
+          <option value="Drama">Drama</option>
+          <option value="Criminal Justice">Criminal Justice</option>
+          <option value="Nutrition">Nutrition</option>
+          <option value="Music">Music</option>
+          <option value="Interior Design">Interior Design</option>
+          <option value="Spanish">Spanish</option>
+          <option value="Education">Education</option>
+          <option value="Religion">Religion</option>
 
 
 
-      </select>
+        </select>
       </div>
       <div class="form-group">
         <label for="Lifestyle">Which of these lifestyle preferences best describe you?</label>
         <select class="form-control" id="lifestyle">
-        <option value=""></option>
-        <option value="low">Humble lifestyle</option>
-        <option value="medium">Likes to have some fun</option>
-        <option value="high">Super baller lifestyle</option>
+          <option value=""></option>
+          <option value="low">Humble lifestyle</option>
+          <option value="medium">Likes to have some fun</option>
+          <option value="high">Super baller lifestyle</option>
 
-      </select>
+        </select>
       </div>
       <div class="form-group">
         <label for="schoolType">Which type of school will you be attending?</label>
-        <select class="form-control" id="type">
-        <option value=""></option>
-        <option value="in state public">In State public University </option>
-        <option value="out of state public">Out of State public University</option>
-        <option value="private">Private School</option>
 
-      </select>
+        <div class="row">
+          <div class="col-md-4">
+            <label>
+              <input type="radio" name="typeOfSchool" value="in state public" checked>
+              <img src="" alt="In state public school">
+            </label>
+          </div>
+          <div class="col-md-4">
+            <label>
+              <input type="radio" name="typeOfSchool" value="out of state public">
+              <img src="" alt="Out of state public school">
+            </label>
+          </div>
+          <div class="col-md-4">
+            <label>
+              <input type="radio" name="typeOfSchool" value="private">
+              <img src="" alt="Private school">
+            </label>
+          </div>
+        </div>
+
       </div>
       <div class="form-group">
         <label for="frequency">How quickly would you like to pay back your student loans?</label>
-        <select class="form-control" id="frequency">
-        <option value=""></option>
-        <option value="slow">As slow as possible: 10% of my paycheck</option>
-        <option value="medium">Somewhat quickly: 15% of my paycheck</option>
-        <option value="fast">Super fast: 25% of my paycheck</option>
 
-      </select>
+        <div class="row">
+          <div class="col-md-4">
+            <label>
+              <input type="radio" name="payPercentage" value="slow" checked>
+              <h1>10%</h1>
+            </label>
+          </div>
+          <div class="col-md-4">
+            <label>
+              <input type="radio" name="payPercentage" value="medium">
+              <h1>15%</h1>
+            </label>
+          </div>
+          <div class="col-md-4">
+            <label>
+              <input type="radio" name="payPercentage" value="fast">
+              <h1>25%</h1>
+            </label>
+          </div>
+        </div>
+
+
       </div>
       <div class="cashToday">
         <span>Lastly, let us know how much cash you have in hand and then press submit below</span><br>
@@ -179,5 +232,5 @@
     </div>
   </div>
 
-  </body>
+</body>
 </html>
