--- a/src/index.html
+++ b/src/index.html
@@ -251,10 +251,10 @@
         </div>
 
       </form>
-      <div class="results">
-        <h3></h3>
-
-      </div>
+    </div>
+    <div id="results">
+      <h1 id="finalResults"></h1>
+      <button type="button" id="newCollege">New</button>
     </div>
   </div>
 </body>
