add fix to austin

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <option value="Albuquerque">Albuquerque</option>
             <option value="Anchorage">Anchorage</option>
             <option value="Atlanta">Atlanta</option>
-            <option value="Austino">Austin</option>
+            <option value="Austin">Austin</option>
             <option value="Baltimore">Baltimore</option>
             <option value="Billings">Billings</option>
             <option value="Birmingham">Birmingham</option>
