--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <option value="Albuquerque">Albuquerque</option>
             <option value="Anchorage">Anchorage</option>
             <option value="Atlanta">Atlanta</option>
-            <option value="Austino">Austin</option>
+            <option value="Austin">Austin</option>
             <option value="Baltimore">Baltimore</option>
             <option value="Billings">Billings</option>
             <option value="Birmingham">Birmingham</option>
@@ -255,6 +255,30 @@
         <h3></h3>
 
       </div>
+    </div>
+    <div id="car_lease">
+      <form class="carLeaseForm">
+        <h3>Enter Vehicle MSRP:</h3>
+        <input id="userMsrp" type="text" name="msrp">
+        <h3>How much is your trade in worth:</h3>
+        <input id="userTradeIn" type="text" name="tradeInCredit">
+        <h3>Down payment amount:</h3>
+        <input id="userDownPayment" type="text" name="downPayment">
+        <h3>Sales Tax:</h3>
+        <input id="userSalesTax" type="text" name="salesTax">
+        <h3>APR:</h3>
+        <input id="userApr" type="text" name="apr">
+        <button id = "carLeasing" type="submit" name="button">Enter Here to calculate</button>
+      </form>
+
+
+
+
+
+
+
+
+
     </div>
   </div>
 </body>
