--- a/src/index.html
+++ b/src/index.html
@@ -235,7 +235,7 @@
             <div class="col-md-4">
               <label>
                 <input type="radio" name="typeOfSchool" value="in state public" required>
-                <div class="colleges">
+                <div class="howYouLive">
                   <img src="https://goducks.com/images/logos/site/site.png" alt="In state public school" class="image">
                   <h2>In State Public</h2>
                 </div>
@@ -244,7 +244,7 @@
             <div class="col-md-4">
               <label>
                 <input type="radio" name="typeOfSchool" value="out of state public">
-                <div class="colleges">
+                <div class="howYouLive">
                   <img src="https://gohuskies.com/images/logos/site/site.png" alt="Out of state public school" class="washington">
                   <h2>Out of State Public</h2>
                 </div>
@@ -253,7 +253,7 @@
             <div class="col-md-4">
               <label>
                 <input type="radio" name="typeOfSchool" value="private">
-                <div class="colleges">
+                <div class="howYouLive">
                   <img src="https://gostanford.com/images/logos/site/site.png" alt="Private school" class="image">
                   <h2>Private</h2>
                 </div>
