add more styling

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 <body>
   <div class="container">
     <div id="firstPage">
-      <div class="jumbotron">
+      <div class="tron">
         <h1>Financial Calculators</h1>
       </div>
       <div class="row">
@@ -41,7 +41,7 @@
         </nav>
       </div>
 
-      <div class="jumbotron">
+      <div class="tron">
         <h1>College Return on Investment Calculator</h1>
         <h5>So you're thinking about attending a four year school next year. Before you do, we suggest using our Return on Investment calculator below to figure out if school will leave you too far in the hole.</h5>
       </div>
@@ -310,7 +310,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
         </nav>
-        <div class="jumbotron">
+        <div class="tron">
           <h1>Car Lease Calculator</h1>
         </div>
       </div>
