add more styles

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,7 @@
   <title>College Return on Investment Calculator</title>
 </head>
 <body>
-  <div class="bg-image">
-
-    <div class="container" >
+    <div class="container">
 
       <div id="firstPage">
         <div class="row">
@@ -267,19 +265,19 @@
               <div class="col-md-4">
                 <label>
                   <input type="radio" name="payPercentage" value="slow" required>
-                  <h1>10%</h1>
+                  <h1 class="roundUnderline">10%</h1>
                 </label>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 roundUnderline">
                 <label>
                   <input type="radio" name="payPercentage" value="medium">
-                  <h1>15%</h1>
+                  <h1 class="roundUnderline">15%</h1>
                 </label>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 roundUnderline">
                 <label>
                   <input type="radio" name="payPercentage" value="fast">
-                  <h1>25%</h1>
+                  <h1 class="roundUnderline">25%</h1>
                 </label>
               </div>
             </div>
@@ -342,6 +340,6 @@
 
       </div>
     </div>
-  </div>
+
 </body>
 </html>
