add styling to deal with wording and dropdown menu

--- a/src/index.html
+++ b/src/index.html
@@ -260,7 +260,7 @@
             </div>
           </div>
           <div class="form-group">
-            <h3>How quickly would you like to pay back your student loans:</h3>
+            <h3>What % of your paycheck will you be paying each month:</h3>
             <div class="row">
               <div class="col-md-4">
                 <label>
